k8s-manifests/overlays/uat/superapp/client/auth/patch/uat-patch.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: member-auth
spec:
  replicas: 1
  template:
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
      - name: member-auth
        image: harbor.cbe.com.et/cbe-superapp/member-auth-uat:latest
        imagePullPolicy: Always

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: member-user
spec:
  replicas: 1
  template:
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
      - name: member-user
        image: harbor.cbe.com.et/cbe-superapp/member-user-uat:latest
        imagePullPolicy: Always

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fayda
spec:
  replicas: 1
  template:
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
      - name: fayda
        image: harbor.cbe.com.et/cbe-superapp/fayda-uat:latest
        imagePullPolicy: Always

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: migration
spec:
  replicas: 1
  template:
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
      - name: migration
        image: harbor.cbe.com.et/cbe-superapp/migration-uat:latest
        imagePullPolicy: Always

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ussd-auth
spec:
  replicas: 1
  template:
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
      - name: ussd-auth
        image: harbor.cbe.com.et/cbe-superapp/ussd-auth-uat:latest
        imagePullPolicy: Always
