k8s-manifests/overlays/uat/superapp/client/auth/patch/route-patch.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: member-auth-route
spec:
  path: /api/v1/cbesuperapp/member_auth
  to:
    name: member-auth-uat
    weight: 100
    kind: Service
  host: uatapisuperapp.cbe.com.et
  port:
    targetPort: 8080
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: member-user-route
spec:
  path: /api/v1/cbesuperapp/member_user
  to:
    name: member-user-uat
    weight: 100
    kind: Service
  host: uatapisuperapp.cbe.com.et
  port:
    targetPort: 8080
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: fayda-route
spec:
  path: /api/v1/cbesuperapp/fayda
  to:
    name: fayda-uat
    weight: 100
    kind: Service
  host: uatapisuperapp.cbe.com.et
  port:
    targetPort: 8080
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: migration-route
spec:
  path: /api/v1/cbesuperapp/migration
  to:
    name: migration-uat
    weight: 100
    kind: Service
  host: uatapisuperapp.cbe.com.et
  port:
    targetPort: 8080
